@@ -1,3 +1,9 @@
+2017-03-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCopt.c,
+	  support/regression/tests/bug-2590.c:
+	  Fix bug #2590.
+
 2017-02-10 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
